# fastApi_practica

./: .gitignore  main.py  pyproject.poml  pyproject.toml  requirements.txt
models/: form_data.py  task.py
