[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-practica"
version = "0.1.0"
description = "FastAPI practice project"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]==0.139.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "python-multipart>=0.0.18",
    "supabase==2.31.0"
]

[tool.fastapi]
entrypoint = "main:app"
